# litellm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  model_prices_and_context_window.json  pyproject.toml
.github/workflows/: merge_from_upstream_manual.yml  testcontext.yml
cookbook/benchmark/eval_suites_mlflow_autoevals/: auto_evals.py
docs/my-website/: Dockerfile  package-lock.json  package.json
docs/my-website/docs/: proxy_server.md
litellm/: __init__.py  caching.py  main.py  router.py  utils.py
litellm/config/: models.json5
litellm/deprecated_litellm_server/: .env.template  main.py  server_utils.py
litellm/proxy/: proxy_cli.py  proxy_server.py
