[tool.poetry]
name = "litellm"
version = "1.10.4"
description = "Library to easily interface with LLM API providers"
authors = ["BerriAI"]
license = "MIT License"
readme = "README.md"

# To install, use:
# poetry install --with utils

[tool.poetry.dependencies]
python = "^3.10"
openai = ">=1.3.0"
python-dotenv = ">=0.2.0"
tiktoken = ">=0.4.0"
importlib-metadata = ">=6.8.0"
tokenizers = "*"
click = "*"
jinja2 = "^3.1.2"
certifi = "^2023.7.22"
#ssl = "*"
appdirs = "^1.4.4"
aiohttp = "*"
httpx = "^0.25.1"
requests = "^2.31.0"

contextvars = "^2.4"

[tool.poetry.group.server]
optional = true

[tool.poetry.group.server.dependencies]
tomli = "^2.0.1"
tomli-w = "^1.0.0"
backoff = "^2.2.1"
pyyaml = "^6.0.1"
json5 = "*"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
boto3 = "^1.29.1"
redis = "*"

[tool.poetry.group.utils]
optional = true

[tool.poetry.group.utils.dependencies]
posthog = "^3.0.2"
slack-bolt = "~1.18.0"
sentry-sdk = "^1.35.0"
numpydoc = "~1.6.0"
anthropic = "~0.7.0"
huggingface-hub = "~0.19.2"
autoevals = ">=0.0.31,<0.0.45"
prisma = "*"
celery = "*"
tenacity = "*"
mangum = "*"
langfuse = "*"
waitress = "*"
torch = "*"
transformers = "*"
#seems a big one, depends on nvidia
#torch = "~2.1.1"

uvicorn = {version = "^0.24.0.post1", optional = true}
fastapi = {version = "^0.104.1", optional = true}
backoff = {version = "*", optional = true}
rq = {version = "*", optional = true}

[tool.poetry.extras]
proxy = [
    "uvicorn",
    "fastapi",
    "backoff",
    "rq",
    "orjson",
    "importlib",
]

extra_proxy = [
    "prisma",
    "azure-identity",
    "azure-keyvault-secrets"
]

proxy_otel = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-sdk-resources"
]

[tool.poetry.scripts]
litellm = 'litellm:run_server'

[tool.poetry.group.dev.dependencies]
black = "*"
pydantic-core = "*"
pre-commit = "*"
pytest = "*"
termcolor = "*"
gptcache = "*"
flask = "*"
flask-cors = "*"

[build-system]
requires = ["poetry-core", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version = "1.10.4"
version_files = [
    "pyproject.toml:^version"
]
